--- a/src/shopApp.module.css
+++ b/src/shopApp.module.css
@@ -2,15 +2,26 @@
   background: #ffffff;
 }
 
-.headerImageWrapper {
+.logo-img-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 80px;
 }
 
-.headerImage {
+.logo-img {
   height: 60px;
+}
+
+.header-img{
+  max-height: 15rem;
+  display: block;
+}
+
+.header-img-wrapper{
+  margin: 50px inherit;
+  display: flex; 
+  justify-content: space-evenly;
 }
 
 .main {
